# Transcribe

./: .dockerignore  .gitignore  README.md  docker-compose.yml  export_full_structure.py  export_structure_tree.py  improvement_plan.md
api/: Dockerfile  database.py  main.py  models.py  requirements.txt
api/repositories/: file_repository.py
api/routes/: files.py
api/services/: audio_processor.py  elasticsearch_service.py  transcription.py  translator.py
app/: Dockerfile  config.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
app/api/: router.py
app/repositories/: file_repository.py
app/services/: transcription.py
app/static/js/: scripts.js
app/templates/: file_details.html  file_list.html  index.html  layout.html  settings.html  upload.html
app/templates/static/css/: styles.css
app/templates/static/js/: scripts.js
app/utils/: audio_converter.py  audio_processor.py  audio_splitter.py  google_drive.py  speech_recognizer.py  translator.py
database/: init.sql
